--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
-  "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./",
-    "module": "commonjs",
-    "target": "es6",
-    "noImplicitAny": true,
-    "sourceMap": true,
-    "strict": true,
-    "jsx": "react"
-  },
-  "exclude": [
-    "node_modules"
-  ]
+	"compilerOptions": {
+		"outDir": "./dist/",
+		"module": "commonjs",
+		"target": "es2020",
+		"noImplicitAny": true,
+		"sourceMap": true,
+		"strict": true,
+		"esModuleInterop": true,
+		"alwaysStrict": true,
+		"noUnusedLocals": true,
+		"skipLibCheck": true,
+		"resolveJsonModule": true,
+	},
+	"exclude": [
+		"node_modules"
+	]
 }
