--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 		"noUnusedLocals": true,
 		"skipLibCheck": true,
 		"resolveJsonModule": true,
+		"declaration": true
 	},
 	"exclude": [
 		"node_modules"
